# compactnesslib

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTES.md  Props.cpp  Props.hpp  README.md  Reprojector.cpp  Reprojector.hpp  Scores.md  SpIndex.cpp  SpIndex.hpp  bounded_scores.cpp  bounded_scores.hpp  clipper.cpp  clipper.h  clipper.hpp  compactengine.cpp  compactengine.hpp  compactnesslib.hpp  csv.cpp  geojson.cpp  geojson.hpp  geom.cpp  geom.hpp  iterator_tpl.h  main.cpp  neighbours.cpp  neighbours.hpp  shapefile.cpp  shapefile.hpp  sources.mkf  unbounded_scores.cpp  unbounded_scores.hpp  utility.hpp  wkt.cpp  wkt.hpp
api/compactnesslib/: SpIndex.hpp  bounded_scores.hpp  csv.hpp  geom.hpp  neighbours.hpp  shapefile.hpp  unbounded_scores.hpp
cli/: Makefile  build.sh  engine  main.cpp  test.cpp
cli/test_data/: cb_2015_us_cd114_20m.dbf  cb_2015_us_cd114_20m.shp  cb_2015_us_cd114_20m.shx
compactnesslib/: Reprojector.cpp  geom.cpp  utility.cpp
engine/: GeoStuff.cpp  GeoStuff.hpp  Point.cpp  Point.hpp  compactengine.cpp  compactengine.hpp
lib/: iterator_tpl.h  miniball.hpp  nanoflann.hpp
lib/shapelib/: safileio.cpp  shpopen.cpp
lib/spatialindex/: SpatialIndex.h
lib/spatialindex_c/storagemanager/: MemoryStorageManager.cpp
lib/spatialindex_c/tools/: Tools.cpp
shapelib/: dbfopen.cpp  shpopen.cpp  shptree.cpp
src/: Props.cpp  Reprojector.cpp  SpIndex.cpp  bounded_scores.cpp  compactnesslib.hpp  csv.cpp  geojson.cpp  geojson.hpp  geom.cpp  geom.hpp  neighbours.cpp  shapefile.cpp  unbounded_scores.cpp  wkt.cpp
test/: Makefile  test.cpp
test/test_data/: wkt_test.wkt
unittest/: Makefile  test.cpp
